--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Matthew Pope|GitHub
+title: Matt Pope|GitHub
 subtitle: This is where I will tell my friends way too much about me
 ---
 
